--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -73,16 +73,16 @@ var temp=0;
 <div class="simsubscreen" id="canvas1" style="visibility:hidden;">
 <strong class="incanvas">STEP</strong>
 <span class="circlebg">&nbsp;1&nbsp;</span>
-<p class="steptext">&nbsp;Take 200ml of sample in 2 BOD bottles and dilute it with distilled water by filling the water up to bottle neck.</p>
+<p class="steptext">&nbsp;Take 200ml of sample in 2 BOD bottles and dilute it with Dilution water by filling the water up to bottle neck.</p>
 
 <img id="1-6w1" style="position:absolute; left:170px; top:280px; visibility:hidden;" src="images/water.png" />
 <img id="1-6w2" style="position:absolute; left:340px; top:321px; visibility:hidden;" src="images/water.png" />
-<img id="1-6" style="position:absolute; left:180px; top:170px; cursor:pointer; visibility:hidden;" title="Distilled water" src="images/bottle1.png" />
-<img id="1-61" style="position:absolute; left:180px; top:170px; cursor:pointer; visibility:hidden;" title="Distilled water" src="images/bottle11.png" />
-<img id="1-64" style="position:absolute; left:220px; top:170px; cursor:pointer; visibility:hidden;" title="Distilled water" src="images/bottle14.png" />
-<img id="1-62" style="position:absolute; left:105px; top:195px; cursor:pointer; visibility:hidden;" title="Distilled water" src="images/bottle12.png" />
-<img id="1-65" style="position:absolute; left:295px; top:195px; cursor:pointer; visibility:hidden;" title="Distilled water" src="images/bottle15.png" />
-<img id="1-63" style="position:absolute; left:155px; top:195px; cursor:pointer; visibility:hidden;" title="Distilled water" src="images/bottle13.png" />
+<img id="1-6" style="position:absolute; left:180px; top:170px; cursor:pointer; visibility:hidden;" title="Dilution water" src="images/bottle1.png" />
+<img id="1-61" style="position:absolute; left:180px; top:170px; cursor:pointer; visibility:hidden;" title="Dilution water" src="images/bottle11.png" />
+<img id="1-64" style="position:absolute; left:220px; top:170px; cursor:pointer; visibility:hidden;" title="Dilution water" src="images/bottle14.png" />
+<img id="1-62" style="position:absolute; left:105px; top:195px; cursor:pointer; visibility:hidden;" title="Dilution water" src="images/bottle12.png" />
+<img id="1-65" style="position:absolute; left:295px; top:195px; cursor:pointer; visibility:hidden;" title="Dilution water" src="images/bottle15.png" />
+<img id="1-63" style="position:absolute; left:155px; top:195px; cursor:pointer; visibility:hidden;" title="Dilution water" src="images/bottle13.png" />
 
 <img id="1-5" style="position:absolute; left:230px; top:410px;  visibility:hidden;" src="images/samplewater.png" />
 <img id="1-3" style="position:absolute; left:180px; top:170px; cursor:pointer;" src="images/msrcyl.png" />
@@ -94,23 +94,19 @@ var temp=0;
 <img id="1-44" style="position:absolute; left:325px; top:60px; cursor:pointer; visibility:hidden;" src="images/testsample4.png" />
 <img id="1-4cap" style="position:absolute; left:460.5px; top:252.5px; cursor:pointer;" src="images/tscap.png" />
 <img id="1-42" style="position:absolute; left:255px; top:110px; cursor:pointer; visibility:hidden;" src="images/testsample2.png" />
-<img id="1-1cap" style="position:absolute; left:74px; top:236px; cursor:pointer; visibility:hidden;" src="images/bodcap.png" />
+<img id="1-1cap" style="position:absolute; left:74px; top:236px; cursor:pointer; " src="images/bodcap.png" />
 <img id="1-1samp2" style="position:absolute; left:52px; top:420px;  visibility:hidden;" src="images/sample2.png" />
-<img id="1-1bot" style="position:absolute; left:50px; top:250px; cursor:pointer; visibility:hidden;" src="images/bodbottle1.png" />
-<img id="1-1bot2" style="position:absolute; left:50px; top:250px; cursor:pointer; visibility:hidden;" src="images/bodbottle2.png" />
+<img id="1-1bot" style="position:absolute; left:50px; top:250px; cursor:pointer;" src="images/bodbottle1.png" />
+<img id="1-1cap3" style="position:absolute; left:-10px; top:360px; cursor:pointer; visibility:hidden; " src="images/bodcap.png" />
 <img id="1-1cap2" style="position:absolute; left:53px; top:185px;  visibility:hidden;" src="images/handcap.png" />
 <img id="1-1cap22" style="position:absolute; left:-32.5px; top:307.5px;  visibility:hidden;" src="images/handcap.png" />
-<img id="1-1cap3" style="position:absolute; left:-10px; top:360px; cursor:pointer; visibility:hidden; " src="images/bodcap.png" />
-<img id="1-1" style="position:absolute; left:50px; top:250px; cursor:pointer; visibility:hidden;" src="images/bodbottle.png" />
 
 <img id="1-2cap" style="position:absolute; left:464px; top:236px; cursor:pointer; visibility:hidden;" src="images/bodcap.png" />
 <img id="1-2samp2" style="position:absolute; left:442px; top:420px;  visibility:hidden;" src="images/sample2.png" />
 <img id="1-2bot" style="position:absolute; left:440px; top:250px; cursor:pointer; visibility:hidden;" src="images/bodbottle1.png" />
-<img id="1-2bot2" style="position:absolute; left:440px; top:250px; cursor:pointer; visibility:hidden;" src="images/bodbottle2.png" />
+<img id="1-2cap3" style="position:absolute; left:550px; top:360px; cursor:pointer; visibility:hidden; " src="images/bodcap.png" />
 <img id="1-2cap2" style="position:absolute; left:443px; top:185px;  visibility:hidden;" src="images/handcap.png" />
 <img id="1-2cap22" style="position:absolute; left:550px; top:307.5px; visibility:hidden;" src="images/handcap.png" />
-<img id="1-2cap3" style="position:absolute; left:550px; top:360px; cursor:pointer; visibility:hidden; " src="images/bodcap.png" />
-<img id="1-2" style="position:absolute; left:440px; top:250px; cursor:pointer; visibility:hidden;" src="images/bodbottle.png" />
 
 <img id="name1"  style="position:absolute; left: 589px; top: 105px; visibility:hidden;" src="images/name1.png">
 <img id="name2"  style="position:absolute; left: 589px; top: 105px; visibility:hidden;" src="images/name2.png">
@@ -196,12 +192,16 @@ var temp=0;
 
 <p id="p4-1" style="position:absolute; left:260px; top:120px; visibility:hidden; color:red; font-size:14px;" >Allow the precipitate to settle down for few minutes</p>
 
+<span id="p4-2" style="position:absolute; left:70px; top:120px; text-align:justify; padding:15px; border:1px solid black; background-color:black; border-radius:5px; visibility:hidden;">
+<p style="color:white; font-size:15px;" >If there is no DO present, then white precipitate will form. </p>
+<input id="b4-2" type="button" style="float:right;" value="OK" />
+</span>
 </div>
 
 <div class="simsubscreen" id="canvas5" style="visibility:hidden;">
 <strong class="incanvas">STEP</strong>
 <span class="circlebg">&nbsp;5&nbsp;</span>
-<p class="steptext">&nbsp;Add 1-2ml of concentrated H<sub>2</sub>SO<sub>4</sub> carefully without forming air bubbles.</p>
+<p class="steptext">&nbsp;Add 2ml of concentrated H<sub>2</sub>SO<sub>4</sub> carefully without forming air bubbles.</p>
 
 <img id="5-41sw" style="position:absolute; left:461px; top:308px; visibility:hidden;" src="images/samplewater.png" />
 <img id="5-42" style="position:absolute; left:461px; top:100px; cursor:pointer; visibility:hidden;" src="images/gp3.png" />
@@ -305,6 +305,8 @@ var temp=0;
 <img id="7-5bulb" style="position:absolute; left:500px; top:150px; visibility:hidden; " title="Pipette Bulb" src="images/bulb.png" />
 <img id="7-5up" style="position:absolute; left:551.5px; top:257px; cursor:pointer; visibility:hidden;" src="images/uparrow.png" />
 <img id="7-5down" style="position:absolute; left:564px; top:270px; cursor:pointer; visibility:hidden; transform: rotate(180deg);" src="images/uparrow.png" />
+
+<p id="p7-1" style="position:absolute; left:180px; top:100px; visibility:hidden; color:red; font-size:14px; font-weight:bold;" >For calculation purpose volume of sample is considered as 200ml</p>
 </div>
 
 <div class="simsubscreen" id="canvas8" style="visibility:hidden;">
@@ -503,7 +505,7 @@ var temp=0;
 <div class="simsubscreen" id="canvas15" style="visibility:hidden;">
 <strong class="incanvas">STEP</strong>
 <span class="circlebg">&nbsp;15&nbsp;</span>
-<p class="steptext">&nbsp;Add 1-2ml of concentrated H<sub>2</sub>SO<sub>4</sub> carefully without forming air bubbles.</p>
+<p class="steptext">&nbsp;Add 2ml of concentrated H<sub>2</sub>SO<sub>4</sub> carefully without forming air bubbles.</p>
 <img id="15-41sw" style="position:absolute; left:461px; top:308px; visibility:hidden;" src="images/samplewater.png" />
 <img id="15-42" style="position:absolute; left:461px; top:100px; cursor:pointer; visibility:hidden;" src="images/gp3.png" />
 <img id="15-41" style="position:absolute; left:274px; top:150px; cursor:pointer; visibility:hidden;" src="images/gp2.png" />
@@ -602,7 +604,7 @@ var temp=0;
 <img id="17-5up" style="position:absolute; left:551.5px; top:257px; cursor:pointer; visibility:hidden;" src="images/uparrow.png" />
 <img id="17-5down" style="position:absolute; left:564px; top:270px; cursor:pointer; visibility:hidden; transform: rotate(180deg);" src="images/uparrow.png" />
 
-<p id="p17-1" style="position:absolute; left:60px; top:120px; visibility:hidden; color:red; font-size:13px;" >Suck the solution from the BOD bottle with the<br><br> mouth and make it upto the mark</p>
+<p id="p17-1" style="position:absolute; left:60px; top:120px; visibility:hidden; color:red; font-size:13px;" >For calculation purpose volume of sample is considered as 200ml</p>
 </div>
 
 <div class="simsubscreen" id="canvas18" style="visibility:hidden;">
