--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -306,7 +306,7 @@ var temp=0;
 <img id="7-5up" style="position:absolute; left:551.5px; top:257px; cursor:pointer; visibility:hidden;" src="images/uparrow.png" />
 <img id="7-5down" style="position:absolute; left:564px; top:270px; cursor:pointer; visibility:hidden; transform: rotate(180deg);" src="images/uparrow.png" />
 
-<p id="p7-1" style="position:absolute; left:180px; top:100px; visibility:hidden; color:red; font-size:14px; font-weight:bold;" >For calculation purpose volume of sample is considered as 200ml</p>
+<p id="p7-1" style="position:absolute; left:180px; top:100px; visibility:hidden; color:red; font-size:16px; font-weight:bold;" >For calculation purpose volume of sample is considered as 200ml</p>
 </div>
 
 <div class="simsubscreen" id="canvas8" style="visibility:hidden;">
@@ -405,7 +405,7 @@ var temp=0;
 <p id="p11-0" style="position:absolute; left:132px; top:110px; font-size:10px; color:red;" >&deg;C</p>
 <p id="p11-1" style="position:absolute; left:115px; top:112px; font-size:15px; color:red;" >15</p>
 <p id="p11-2" style="position:absolute; left:255px; top:155px; font-size:12px; color:red; visibility:hidden;" >Set the temperature to 20&deg;C</p>
-<p id="p11-3" style="position:absolute; left:475px; top:335px; font-size:16px; color:red; visibility:hidden;" ><b>After 5 days</b></p>
+<p id="p11-3" style="position:absolute; left:475px; top:337px; font-size:18px; color:red; visibility:hidden;" ><b>After 5 days</b></p>
 
 <img id="11-4" style="position:absolute; left:100px; top:188px; cursor:pointer; width:25px; visibility:hidden;" src="images/sampB11.png" />
 
@@ -604,7 +604,7 @@ var temp=0;
 <img id="17-5up" style="position:absolute; left:551.5px; top:257px; cursor:pointer; visibility:hidden;" src="images/uparrow.png" />
 <img id="17-5down" style="position:absolute; left:564px; top:270px; cursor:pointer; visibility:hidden; transform: rotate(180deg);" src="images/uparrow.png" />
 
-<p id="p17-1" style="position:absolute; left:60px; top:120px; visibility:hidden; color:red; font-size:13px;" >For calculation purpose volume of sample is considered as 200ml</p>
+<p id="p17-1" style="position:absolute; left:60px; top:120px; visibility:hidden; color:red; font-size:15px;" >For calculation purpose volume of sample is considered as 200ml</p>
 </div>
 
 <div class="simsubscreen" id="canvas18" style="visibility:hidden;">
@@ -754,3 +754,4 @@ BOD of given sample = <input id="bod" type="text" style=" border:none; border-bo
 </div>
 </body>
 </html>
+<!--comments-->
